--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -1,4 +1,9 @@
 {
-    "CommandService": "https://commands-clusterip-srv:80/api/c/platforms"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "CommandService": "http://commands-clusterip-srv:80/api/c/platforms"
 }
-  
