--- a/K8S/mssql-plat-depl.yaml
+++ b/K8S/mssql-plat-depl.yaml
@@ -14,21 +14,23 @@ spec:
     spec:
       containers:
         - name: mssql
-          image: mcr.microsoft.com/mssql/server:2017-latest
+          # image: mcr.microsoft.com/mssql/server:2017-latest
+          image: mcr.microsoft.com/azure-sql-edge:latest
           ports:
             - containerPort: 1433
           env:
           - name: MSSQL_PID
-            value: "Express"
+            value: "Developer"
           - name: ACCEPT_EULA
             value: "Y"
           - name: SA_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: mssql
-                key: SA_PASSWORD
+            value: 'pa55w0rd!'
+            # valueFrom:
+            #   secretKeyRef:
+            #     name: mssql
+            #     key: SA_PASSWORD
           volumeMounts:
-          - mountPath: /var/opt/mssql/data
+          - mountPath: /var/opt/mssql
             name: mssqldb
       volumes:
       - name: mssqldb
