--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService": "https://localhost:7276/api/c/platforms"
+  "CommandService": "https://localhost:7276/api/c/platforms",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Initial Catalog=PlatformsDB;User ID=sa;Password=pa55w0rd!;"
+  }
+  
 }
