--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -5,5 +5,8 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "CommandService": "http://commands-clusterip-srv:80/api/c/platforms"
+    "CommandService": "http://commands-clusterip-srv:80/api/c/platforms",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=mssql-clusterip-srv,1433;Initial Catalog=PlatformsDB;User ID=sa;Password=pa55w0rd!;"
+    }
 }
