working on setting up rabbitMQ message bus

--- a/LesJacksonMicroservices/PlatformService/appsettings.Development.json
+++ b/LesJacksonMicroservices/PlatformService/appsettings.Development.json
@@ -8,6 +8,7 @@
   "CommandService": "https://localhost:7276/api/c/platforms",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Initial Catalog=PlatformsDB;User ID=sa;Password=pa55w0rd!;"
-  }
-  
+  },
+  "RabbitMQ": "localhost",
+  "RabbitMQPort": "5672"
 }
