--- a/LesJacksonMicroservices/PlatformService/appsettings.Production.json
+++ b/LesJacksonMicroservices/PlatformService/appsettings.Production.json
@@ -8,5 +8,7 @@
     "CommandService": "http://commands-clusterip-srv:80/api/c/platforms",
     "ConnectionStrings": {
         "DefaultConnection": "Server=mssql-clusterip-srv,1433;Initial Catalog=PlatformsDB;User ID=sa;Password=pa55w0rd!;"
-    }
+    },
+    "RabbitMQ": "rabbitmq-clusterip-srv",
+    "RabbitMQPort": "5672"
 }
