Added publisher on platform, working on subscriber on command

--- a/LesJacksonMicroservices/CommandService/appsettings.Development.json
+++ b/LesJacksonMicroservices/CommandService/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "RabbitMQ": "localhost",
+  "RabbitMQPort": "5672"
 }
