working on grpc config

--- a/LesJacksonMicroservices/CommandService/appsettings.Development.json
+++ b/LesJacksonMicroservices/CommandService/appsettings.Development.json
@@ -6,5 +6,6 @@
     }
   },
   "RabbitMQ": "localhost",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "GrpcPlatform": "https://localhost:7242"
 }
