--- a/LesJacksonMicroservices/CommandService/CommandService.csproj
+++ b/LesJacksonMicroservices/CommandService/CommandService.csproj
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="google.protobuf" Version="3.19.1" />
+    <PackageReference Include="grpc.net.client" Version="2.40.0" />
+    <PackageReference Include="grpc.tools" Version="2.42.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
