--- a/LesJacksonMicroservices/CommandService/appsettings.Production.json
+++ b/LesJacksonMicroservices/CommandService/appsettings.Production.json
@@ -6,5 +6,6 @@
         }
     },
     "RabbitMQ": "rabbitmq-clusterip-srv",
-    "RabbitMQPort": "5672"
+    "RabbitMQPort": "5672",
+    "GrpcPlatform": "http://platforms-clusterip-srv:666"
 }
