--- a/LesJacksonMicroservices/PlatformService/appsettings.Production.json
+++ b/LesJacksonMicroservices/PlatformService/appsettings.Production.json
@@ -10,5 +10,17 @@
         "DefaultConnection": "Server=mssql-clusterip-srv,1433;Initial Catalog=PlatformsDB;User ID=sa;Password=pa55w0rd!;"
     },
     "RabbitMQ": "rabbitmq-clusterip-srv",
-    "RabbitMQPort": "5672"
+    "RabbitMQPort": "5672",
+    "Kestrel": {
+        "Endpoints": {
+            "Grpc": {
+                "Protocols": "Http2",
+                "Url": "http://platforms-clusterip-srv:666"
+            },
+            "webApi": {
+                "Protocols": "Http1",
+                "Url": "http://platforms-clusterip-srv:80"
+            }
+        }
+    }
 }
